# TransferMatrixMethod

./: .gitignore  README.md  multilayer_response.py  pyproject.toml
transfermatrixmethod/: __init__.py  montecarlo.py  multilayer_response.py  structure.py
